--- a/frontend/src/app/components/app-product/app-product.component.css
+++ b/frontend/src/app/components/app-product/app-product.component.css
@@ -13,6 +13,36 @@
     /* border-radius: 5px; */
 }
 
-.form-input {
-    opacity: 1 !important;
+.buttons-list div {
+    float: right;
 }
+
+.non-editable .ui-inputtext {
+    opacity: 0.7;
+}
+
+.ui-inputtext {
+    opacity: 1;
+}
+/* 
+#lightbox{
+	display:none; 
+	position: absolute;
+	top:50%;
+	left:50%;
+	z-index:9999;
+	width: 300px;
+	height: 300px;
+	margin:-250px 0 0 -250px;
+	background:#fff;
+	text-align:center;
+    vertical-align: 50%;
+	border: 2px solid black; 
+}
+
+#lightbox.done #lbContent{
+	display:block;
+	width: 280px;
+	height: 280px;
+	border: 10px solid white;
+} */
