--- a/frontend/src/app/components/app-product/app-product.component.css
+++ b/frontend/src/app/components/app-product/app-product.component.css
@@ -24,25 +24,12 @@
 .ui-inputtext {
     opacity: 1;
 }
-/* 
-#lightbox{
-	display:none; 
-	position: absolute;
-	top:50%;
-	left:50%;
-	z-index:9999;
-	width: 300px;
-	height: 300px;
-	margin:-250px 0 0 -250px;
-	background:#fff;
-	text-align:center;
-    vertical-align: 50%;
-	border: 2px solid black; 
+
+.form-input {
+	padding: 0;
 }
 
-#lightbox.done #lbContent{
-	display:block;
-	width: 280px;
-	height: 280px;
-	border: 10px solid white;
-} */
+textarea {
+	/* resize: auto; */
+	
+}
